# Embarcatech

./: .gitignore  README.md
fase_1/: README.md
fase_1/tarefa1_interface_comunicacao_U4C6/: CMakeLists.txt  README.md  tarefa_interface_comunicacao_U4C6.c
fase_1/tarefa1_introducao_U4C1/: CMakeLists.txt  blink_codigo_morse.c  diagram.json  wokwi.toml
fase_2/: README.md
fase_2/tarefa28_IA4_embarcatech/: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
fase_2/tarefa28_IA4_embarcatech/lib/button/: button.c  button.h
fase_2/tarefa28_IA4_embarcatech/lib/buzzer/: buzzer.c  buzzer.h
fase_2/tarefa28_IA4_embarcatech/lib/led/: led.c  led.h
fase_2/tarefa28_IA4_embarcatech/lib/ssd1306/: display.c  display.h  font.h  ssd1306.c  ssd1306.h
fase_2/tarefa28_IA4_embarcatech/lib/ws2812b/: example_usage.c  led_matrix_numbers.c  ws2812b.c  ws2812b.h
fase_2/tarefa28_IA4_embarcatech/lib/ws2812b/pio/: ws2812b.pio
fase_2/tarefa28_IA4_embarcatech/models/: mnist_cnn_float.keras  mnist_cnn_int8.tflite  mnist_cnn_int8_model.h
fase_2/tarefa28_IA4_embarcatech/samples/: mnist_sample_00.h  mnist_sample_01.h  mnist_sample_02.h  mnist_sample_03.h  mnist_sample_04.h  mnist_sample_05.h  mnist_sample_06.h  mnist_sample_07.h  mnist_sample_08.h  mnist_sample_09.h  mnist_sample_10.h  mnist_sample_11.h  mnist_sample_12.h  mnist_sample_13.h  mnist_sample_14.h  mnist_sample_15.h  mnist_sample_16.h  mnist_sample_17.h  mnist_sample_18.h  mnist_sample_19.h
fase_2/tarefa28_IA4_embarcatech/src/: CNN_MNIST.ipynb  main.c  test_serial_mnist.py  tflm_wrapper.cpp  tflm_wrapper.h
(+47 files in other folders)
